--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 
 <body>
         <!-- broke up the website by the different color sections: yellow, white, red, blue -->
-        <div id="section1"> <!-- yellow section -->
-                <header>  <!-- navbar  -->
+        <div id="section1">
+                <!-- yellow section -->
+                <header>
+                        <!-- navbar  -->
                         <img src="images/logo-header-3.png">
                         <nav>
                                 <!--left the href attributes empty because other pages do not exist-->
@@ -39,27 +41,36 @@
                 </div>
         </div>
 
-        <div>  <!-- white section -->
-                <div id="light-blue-dec"> <!-- this used solely for the slate-blue rect in this section... dec stands for decoration -->
+        <div>
+                <!-- white section -->
+                <div id="light-blue-dec">
+                        <!-- this used solely for the slate-blue rect in this section... dec stands for decoration -->
                 </div>
 
                 <div id="section2">
                         <p class="bigger-header">Benefits of using Simmr</p>
                         <p id="body-paragraph">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                                mollit anim id est laborum.
+                                Cooking can be one of the best ways to create memories with parents,
+                                children, siblings, and friends. Simmr wants to reunite you with your family to build more great memories and bonds that
+                                you will always remember.
+                                <br><br>
+                                Even if you're in another country, Simmr connects you via live video chat and easy to
+                                follow recipes so that you and your loves can spend quality time together while doing
+                                something you love.
+                                <br><br>
+                                Apart from spending quality time with family, studies show that cooking with others
+                                helps us create healthier eating habits and help improve our nutritional, social, and
+                                emotional wellbeing.
                         </p>
                 </div>
 
-                <div id="dark-blue-dec"><!-- this used solely for the dark-blue rect in this section -->
+                <div id="dark-blue-dec">
+                        <!-- this used solely for the dark-blue rect in this section -->
                 </div>
         </div>
 
-        <div class="flex-content" id="section3"> <!-- red section (acts as call to action)-->
+        <div class="flex-content" id="section3">
+                <!-- red section (acts as call to action)-->
                 <div class="content">
                         <p class="big-header">Try<br>Simmr<br>Today</p>
                 </div>
@@ -71,11 +82,14 @@
                 </div>
         </div>
 
-        <footer>  <!-- blue section -->
-                <div class="inner"><!-- uses another div inside the footer to use a 
+        <footer>
+                <!-- blue section -->
+                <div class="inner">
+                        <!-- uses another div inside the footer to use a 
                         background color and change the width of the actual content in the footer-->
                         <img src="images/logo-footer.png">
-                        <dl><!--using description list because there are multiple 
+                        <dl>
+                                <!--using description list because there are multiple 
                                 header and sub element links in the footer-->
                                 <dt>PRODUCT</dt>
                                 <!--left the href attributes empty because other pages do not exist-->
